# Local-Context-Chatbot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/images/FAULT/: .gitkeep
data/images/PASS/: .gitkeep
docs/: architecture.md  brief.md  claude.md  integration-guide.md
knowledge/concepts/: camera-optics.md  classification-labeling.md  dataset-quality.md  thermal-seal-inspection.md
knowledge/known-issues/: KB-001-ambient-temperature.md  KB-002-sensor-contamination.md
knowledge/parameters/: thresholds.md
knowledge/procedures/: conveyor-integration.md  getting-started.md
knowledge/troubleshooting/: false-positives.md  inconsistent-results.md
src/inspect_assist/: __init__.py  __main__.py  app.py  cache.py  chunking.py  config.py  knowledge.py  orchestrator.py  reranker.py  storage.py  vectorstore.py
src/inspect_assist/adapters/: dataset.py
src/inspect_assist/api/: models.py  routes.py
src/inspect_assist/llm/: __init__.py  providers.py
src/inspect_assist/static/: style.css  widget.js
src/inspect_assist/templates/: chat.html  widget_demo.html
src/inspect_assist/tools/: __init__.py  dataset_tools.py  knowledge_tools.py  vision_tools.py
tests/: eval_dataset.json  eval_rag.py  test_cache.py  test_chunking.py  test_core.py  test_orchestrator.py  test_routes.py  test_storage.py  test_vectorstore.py
